# SickBeatBetty

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.rtf  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  TODO.md  beatgen.cpp  beatgen.h  buildinfo.cpp  plugineditor.cpp  pluginprocessor.cpp
.github/workflows/: build-mac.yml  build-windows.yml  cmake.yml
.github/workflows.disabled/: build-ubuntu.yml
CMakeModules/: CodeSign.cmake  CodeSignScript.cmake.in  README.md
docs/: SickBeatBetty_BlockDiagram.drawio
src/: CMakeLists.txt  aboutui.cpp  aboutui.h  applogger.cpp  applogger.h  beatgen.cpp  beatgen.h  beatgenclockui.cpp  beatgenclockui.h  beatgengroup.cpp  beatgengroup.h  beatgenui.cpp  beatgenui.h  beatvisualizer.cpp  beatvisualizer.h  buildinfo.cpp.in  buildinfo.h  parambutton.cpp  parambutton.h  paramcombobox.cpp  paramcombobox.h  paramhelper.cpp  paramhelper.h  paramslider.cpp  paramslider.h  plugineditor.cpp  plugineditor.h  pluginprocessor.cpp  pluginprocessor.h  presetloadui.cpp  presetloadui.h  presetmanager.cpp  presetmanager.h  presetsaveui.cpp  presetsaveui.h  presettablelistbox.cpp  presettablelistbox.h  programeditor.cpp  programeditor.h  programmanager.cpp  (+7 more)
